# fantasy-sports

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  refresh.yml  tests.yml
configs/: half_ppr.yaml  ppr.yaml  standard.yaml  superflex_bonus.yaml
src/ffa/: __init__.py  backtest.py  calibration.py  cli.py  dashboard.py  downside.py  draft.py  games.py  ingest.py  league.py  learned.py  level.py  optimize.py  projection.py  quantile.py  ranking.py  rookies.py  scoring.py  simulation.py
tests/: conftest.py  test_backtest.py  test_calibration.py  test_dashboard.py  test_downside.py  test_draft.py  test_games.py  test_ingest.py  test_league.py  test_learned.py  test_level.py  test_optimize.py  test_projection.py  test_quantile.py  test_ranking.py  test_rookies.py  test_scoring.py  test_simulation.py
